--- a/index.html
+++ b/index.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Aapo Kojo">
+    <meta name="description" content="This page contains projects that I have made or have been part of.">
+    <title> Aapo Kojo </title>
+    <link rel="icon" href="sly.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-<style>
-
-* {
-   /*font-family: "Comic Neue", cursive;*/
-}
-body {
-  margin-left: 200px;
-
-}
-
-
-</style>
 </head>
+
 <body>
-<div class="center_div">
-  <h1>Hello World!</h1>
-  <p>Hello.</p>
-  <img src="sly.png" alt="Sly" width="500" height="333">
+  
+  <div class="Start">
+    <h1>Hello! My name is Aapo Kojo and welcome to see my projects.</h1>
+    <div class="content">
+        <img src="sly.png" alt="Sly" width="200" height="150">
+        <div class="text">
+            <h2> Little bit amout myself:</h2>
+            <ul>
+              <li>I'm a third year student at KAMK</li>
+              <li>I'm 22 years old</li>
+              <li>I'm really eager about programming</li>
+              <li>I like to learn new things</li>
+          </ul>
+        </div>
+    </div>
+    <div class="text">
+      <h2> Links:</h2>
+      <ul>
+        <li>Itchio: </li>
+        <li>Linkedin</li>
+    </ul>
+  </div>
+    <hr>
 </div>
+
+
+  <div class="center_div">
+    <p>The background property can take six different values.</p>
+  </div>
+
+  <div class="div-2">
+    <p>The background property can take six different values.</p>
+  </div>
+
+  <div class="div-3">
+    <p>The background property can take six different values.</p>
+  </div>
 
 </body>
 </html>
