Trying out gifs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MP4 Video Example</title>
 </head>
 
 <body>
@@ -29,11 +31,11 @@
           </ul>
         </div>
     </div>
-    <div class="text">
+    <div class="linkText">
       <h2> Links:</h2>
       <ul>
-        <li>Itchio: </li>
-        <li>Linkedin</li>
+        <li><a href="https://humsteri.itch.io/">Itch.io</a></li>
+        <li><a href="https://www.linkedin.com/in/aapo-kojo-857226252/">LinkedIn</a></li>
     </ul>
   </div>
     <hr>
@@ -41,16 +43,43 @@
 
 
   <div class="center_div">
-    <p>The background property can take six different values.</p>
+    <h1><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h1>
+    <div class="content">
+      <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
+        <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <div class="text">
+          <h2> Little bit amout myself:</h2>
+          <ul>
+            <li>I'm a third year student at KAMK</li>
+            <li>I'm 22 years old</li>
+            <li>I'm really eager about programming</li>
+            <li>I like to learn new things</li>
+        </ul>
+      </div>
   </div>
+  </div>
+
+  <div class="center_div2">
+    <h1><a href="https://juhot.itch.io/pogo-blast">Pogo Blast</a></h1>
+    <div class="content">
+      <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
+        <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <div class="text">
+          <h2> Little bit amout myself:</h2>
+          <ul>
+            <li>I'm a third year student at KAMK</li>
+            <li>I'm 22 years old</li>
+            <li>I'm really eager about programming</li>
+            <li>I like to learn new things</li>
+        </ul>
+      </div>
+  </div>
+  </div>
+
 
   <div class="div-2">
-    <p>The background property can take six different values.</p>
   </div>
-
-  <div class="div-3">
-    <p>The background property can take six different values.</p>
-  </div>
-
 </body>
 </html>
