--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
   
   <div class="Start">
-    <h1>Hello! My name is Aapo Kojo and welcome to see my projects.</h1>
+    <h1>Hello! My name is Aapo Kojo and welcome to see projects I have been part of.</h1>
     <div class="content">
         <img src="sly.png" alt="Sly" width="200" height="150">
         <div class="text">
-            <h2> Little bit amout myself:</h2>
+            <h2> Little bit about myself:</h2>
             <ul>
               <li>I'm a third year student at KAMK</li>
               <li>I'm 22 years old</li>
@@ -45,27 +45,40 @@
   <div class="center_div">
     <h1><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h1>
     <div class="content">
-      <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
+      <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
         <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
-      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
+      <img src="Chest.gif" alt="Animated GIF" width="800" height="500">
       <div class="text">
-          <h2> Little bit amout myself:</h2>
+          <h2> Inventory and chest:</h2>
           <ul>
-            <li>I'm a third year student at KAMK</li>
-            <li>I'm 22 years old</li>
-            <li>I'm really eager about programming</li>
-            <li>I like to learn new things</li>
+            <li>Able to transfer items to chests that get saved and loaded at start</li>
+            <li>Split item stacks</li>
+            <li>Deposit all that puts all possible items to chest</li>
+            <li>Loot all that takes all items from chest to inventory</li>
+            <li>Able to favorite items so they don't get effected by Deposit all</li>
         </ul>
       </div>
-  </div>
+    </div>
+    <hr>
+    <div class="content">
+      <img src="Items.gif" alt="Animated GIF" width="800" height="500">
+      <div class="text">
+          <h2> Items:</h2>
+          <ul>
+            <li>Dropping and picking up items</li>
+            <li>Drop one or whole stack of items</li>
+            <li>Bushesh that drop items when damaged</li>
+        </ul>
+      </div>
+    </div>
+    <hr>
   </div>
 
   <div class="center_div2">
     <h1><a href="https://juhot.itch.io/pogo-blast">Pogo Blast</a></h1>
-    <div class="content">
-      <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
-        <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
-      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <div class="gifContent">
+      <img src="Ikipuu.gif" alt="Animated GIF" width="500" height="300">
       <div class="text">
           <h2> Little bit amout myself:</h2>
           <ul>
