--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
       </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
       <img src="Chest.gif" alt="Animated GIF" width="800" height="500">
+      <img src="{{site.baseurl | prepend: site.url}}Chest.gif" alt="ChestGif" />
       <div class="text">
           <h2> Inventory and chest:</h2>
           <ul>
