--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li>I'm 22 years old</li>
               <li>I'm really eager about programming</li>
               <li>I like to learn new things</li>
+              <li>Skills: Unity, C#, Unreal Engine, Git</li>
           </ul>
         </div>
     </div>
@@ -44,13 +45,11 @@
 
   <div class="center_div">
     <h1><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h1>
+    <h2> Unity 3D Game</h2>
     <div class="content">
-      <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx">
-        <a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
-      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> -->
-      <img src="TestChest.gif" alt="Animated GIF" width="800" height="500">
-      <img src="./TestChest.gif" alt="Animated GIF" width="800" height="500">
-      <img src="{{site.baseurl | prepend: site.url}}Chest.gif" alt="ChestGif" />
+      <blockquote class="imgur-embed-pub" lang="en" data-id="tYPuKMe"><a href="https://imgur.com/tYPuKMe">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <!--<img src="TestChest.gif" alt="Animated GIF" width="800" height="500"> -->
       <div class="text">
           <h2> Inventory and chest:</h2>
           <ul>
@@ -64,7 +63,9 @@
     </div>
     <hr>
     <div class="content">
-      <img src="Items.gif" alt="Animated GIF" width="800" height="500">
+      <!--<img src="Items.gif" alt="Animated GIF" width="800" height="500"> -->
+      <blockquote class="imgur-embed-pub" lang="en" data-id="jjH4jv8"><a href="https://imgur.com/jjH4jv8">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
       <div class="text">
           <h2> Items:</h2>
           <ul>
@@ -75,12 +76,39 @@
       </div>
     </div>
     <hr>
+    <div class="content">
+      <!--<img src="Items.gif" alt="Animated GIF" width="800" height="500"> -->
+      <blockquote class="imgur-embed-pub" lang="en" data-id="eG1AIPw"><a href="https://imgur.com/eG1AIPw">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <div class="text">
+          <h2> Dialogue:</h2>
+          <ul>
+            <li>Choosing dialogue response</li>
+            <li>Different dialogue endings</li>
+            <li>Sentences appear letter by letter</li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="content">
+      <!--<img src="Items.gif" alt="Animated GIF" width="800" height="500"> -->
+      <blockquote class="imgur-embed-pub" lang="en" data-id="mtR2zcx"><a href="https://imgur.com/mtR2zcx">View post on imgur.com</a>
+      </blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <div class="text">
+          <h2> Collections:</h2>
+          <ul>
+            <li>Modular collection system</li>
+            <li>Collectin items and saving the progression</li>
+            <li>Able to get rewards when fully completed</li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <div class="center_div2">
     <h1><a href="https://juhot.itch.io/pogo-blast">Pogo Blast</a></h1>
+    <h2>Unreal Engine 3D Multiplayer Game</h2>
     <div class="gifContent">
-      <img src="Ikipuu.gif" alt="Animated GIF" width="500" height="300">
       <div class="text">
           <h2> Little bit amout myself:</h2>
           <ul>
