New look into site

--- a/contacts.html
+++ b/contacts.html
@@ -22,14 +22,10 @@
     </header>
 
     <div class="content">
-        <h2>Hi there!</h2>
-        <p>You've stumbled upon the portfolio of Aapo Kojo (game programmer, hard worker, video game and movie enthusiast). Really big fan of horror and marvel movies. 
-        
-        <p>I'm studying game programming at KAMK and currently I'm on my third year.</p>
-
-        <img src="sly.png" alt="Sly" width="200" height="150">
-        
-        <p></p>
+        <h2>You can reach me from: </h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/aapo-kojo-857226252/">LinkedIn</a></li>
+        </ul>
     </div>
 
     <footer>
