--- a/resume.html
+++ b/resume.html
@@ -22,14 +22,35 @@
     </header>
 
     <div class="content">
-        <h2>Hi there!</h2>
-        <p>You've stumbled upon the portfolio of Aapo Kojo (game programmer, hard worker, video game and movie enthusiast). Really big fan of horror and marvel movies. 
-        
-        <p>I'm studying game programming at KAMK and currently I'm on my third year.</p>
-
-        <img src="sly.png" alt="Sly" width="200" height="150">
-        
-        <p></p>
+        <h2>Engines </h2>
+        <ul>
+            <li>Unity (2D, 3D, Multiplayer)</li>
+            <li>Unreal Engine 5 (3D, Multiplayer)</li>
+        </ul>
+        <h2>Languages </h2>
+        <ul>
+            <li>C#</li>
+            <li>C++</li>
+            <li>Blueprints</li>
+            <li>Html</li>
+        </ul>
+        <h2>Project management </h2>
+        <ul>
+            <li>Hacknplan</li>
+            <li>Trello</li>
+            <li>Discord</li>
+        </ul>
+        <h2>As a person </h2>
+        <ul>
+            <li>Strong team worker</li>
+            <li>Enthusiastic to learn new things</li>
+            <li>Ready to challenge myself</li>
+            <li>Blender</li>
+        </ul>
+        <h2>Some knowledge </h2>
+        <ul>
+            <li>Blender</li>
+        </ul>
     </div>
 
     <footer>
