--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
             <a href="projects.html">Professional Projects</a>
             <a href="#">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
-            <a href="contacts.html">Contact</a>
+            <a href="contacts.html">Contacts and links</a>
         </nav>
     </header>
 
@@ -25,6 +25,11 @@
         <h2>You can reach me from: </h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/aapo-kojo-857226252/">LinkedIn</a></li>
+        </ul>
+        <h2>Other links: </h2>
+        <ul>
+            <li><a href="https://humsteri.itch.io/">Itch.io</a></li>
+            <li><a href="https://play.google.com/store/apps/developer?id=Humsteri">Google Play</a></li>
         </ul>
     </div>
 
