--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="projects.html">Professional Projects</a>
             <a href="#">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
-            <a href="contacts.html">Contact</a>
+            <a href="contacts.html">Contacts and links</a>
         </nav>
     </header>
 
@@ -25,11 +25,17 @@
         <h2>Hi there!</h2>
         <p>You've stumbled upon the portfolio of Aapo Kojo (game programmer, hard worker, video game and movie enthusiast). Really big fan of horror and marvel movies. 
         
-        <p>I'm studying game programming at KAMK and currently I'm on my third year.</p>
+        <p>I'm studying game programming at Kajaani University of Applied Sciences (KAMK) and currently I'm on my third year.
+             I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
 
         <img src="sly.png" alt="Sly" width="200" height="150">
         
-        <p></p>
+        <h2>Little bit about myself </h2>
+        <ul>
+            <li>I'm 22 years old and I'm from Finland</li>
+            <li>3 years of experience making games</li>
+            <li>I love cats</li>
+        </ul>
     </div>
 
     <footer>
