--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -17,7 +17,7 @@
             <a href="projects.html">Professional Projects</a>
             <a href="#">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
-            <a href="contacts.html">Contact</a>
+            <a href="contacts.html">Contacts and links</a>
         </nav>
     </header>
 
@@ -25,9 +25,9 @@
         <header>
             <h1>Projects</h1>
             <nav>
-                <a href="index.html">All</a>
-                <a href="projects.html">Unreal Engine 5</a>
-                <a href="#">Unity</a>
+                <a href="projects.html">All</a>
+                <a href="projects_ue5.html">Unreal Engine 5</a>
+                <a href="projects_unity.html">Unity</a>
             </nav>
         </header>
         <h2><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h2>
