--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
             <a href="projects.html">Professional Projects</a>
             <a href="#">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
-            <a href="contacts.html">Contact</a>
+            <a href="contacts.html">Contacts and links</a>
         </nav>
     </header>
 
@@ -36,6 +36,7 @@
         </ul>
         <h2>Project management </h2>
         <ul>
+            <li>Git</li>
             <li>Hacknplan</li>
             <li>Trello</li>
             <li>Discord</li>
@@ -45,11 +46,11 @@
             <li>Strong team worker</li>
             <li>Enthusiastic to learn new things</li>
             <li>Ready to challenge myself</li>
-            <li>Blender</li>
         </ul>
         <h2>Some knowledge </h2>
         <ul>
             <li>Blender</li>
+            <li>Cmake</li>
         </ul>
     </div>
 
