--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="projects.html">Professional Projects</a>
-            <a href="#">Fun Side Projects</a>
+            <a href="sideprojects.html">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contacts.html">Contacts and links</a>
         </nav>
