--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="projects.html">Professional Projects</a>
-            <a href="#">Fun Side Projects</a>
+            <a href="sideprojects.html">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contacts.html">Contacts and links</a>
         </nav>
@@ -30,12 +30,30 @@
                 <a href="projects_unity.html">Unity</a>
             </nav>
         </header>
-        <h2><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h2>
-        
-
-        <img src="sly.png" alt="Sly" width="200" height="150">
-        
-        <p></p>
+        <h2><a href="https://juhot.itch.io/pogo-blast">Pogo Blast</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 8</li>
+                <li>Time frame: 4 months</li>
+                <li>Engine: Unreal Engine 5, 3D, Multiplayer</li>
+                <li>Tasks: Multiplayer matchmaking, deathmatch gamemode</li>
+            </ul>
+        </div>
+        <h2>Matchmaking </h2>
+        <ul>
+            <li>Steam integration: Game detects and connects to steam on startup</li>
+            <li>Lobbies: Able to make private or public lobbies</li>
+            <li>Lobby searching: Display all lobbies</li>
+        </ul>
+        <h2>Deathmatch gamemode </h2>
+        <ul>
+            <li>Kill feed: Displays names of the killer and killed player</li>
+            <li>Scoreboard: Displays steam icon, name, kills, deaths, KDA</li>
+            <li>Match winner: Announces the winner of the match at the end of the round</li>
+        </ul>
+        <iframe frameborder="0" src="https://itch.io/embed/2684667?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://juhot.itch.io/pogo-blast">Pogo Blast by JuhoT, FakeKuhis, Purkaja, Masaboy, Sarcaster, eetsuou, Humsteri, retvis</a></iframe>
     </div>
 
     <footer>
