--- a/projects_unity.html
+++ b/projects_unity.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="projects.html">Professional Projects</a>
-            <a href="#">Fun Side Projects</a>
+            <a href="sideprojects.html">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contacts.html">Contacts and links</a>
         </nav>
@@ -31,13 +31,144 @@
             </nav>
         </header>
         <h2><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 5</li>
+                <li>Time frame: 3 months</li>
+                <li>Engine: Unity, 3D</li>
+                <li>Tasks: Inventory, items, dialogue, crafting and save systems</li>
+            </ul>
+        </div>
         
-
-        <img src="sly.png" alt="Sly" width="200" height="150">
+        <h2>Inventory </h2>
+        <ul>
+            <li>Grid-based Layout: Implemented a Terraria and Minecraft-like grid-based inventory system for intuitive item management</li>
+            <li>Item Transfer: Developed functionality for transferring items to and from chests</li>
+            <li>Stack Splitting: Split item stacks for flexible inventory management</li>
+            <li>Deposit Buttons: Mass move items from inventory to container or vise versa</li>
+        </ul>
+        <h2>Items </h2>
+        <ul>
+            <li>Item Management: System that allows players to drop single items or entire stacks easily</li>
+            <li>Scriptable Objects: Easy addition of new items, enhancing scalability.</li>
+            <li>Event Integration: Event handling for items to make different consumables</li>
+        </ul>
+        <h2>Crafting </h2>
+        <ul>
+            <li>Expandable Crafting System: System that can be easily expanded using scriptable objects</li>
+            <li>New Item Integration: Facilitated the addition of new items with scriptable objects for crafting recipes</li>
+        </ul>
+        <h2>Dialogue </h2>
+        <ul>
+            <li>Dialogue unlocking: Players can unlock additional dialogue options by engaging in conversations with characters</li>
+            <li>Dialogue Activation: Certain dialogue options may require specific items in the player’s inventory.</li>
+            <li>Gradual Text Display: Implemented a letter-by-letter text appearance</li>
+        </ul>
+        <iframe frameborder="0" src="https://itch.io/embed/2837437?linkback=true&amp;bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/groundfolk">Groundfolk by retvis, Humsteri, Masaboy, Joukkari</a></iframe>
         
         <p></p>
     </div>
+    <div class="content">
+        <h2><a href="https://play.google.com/store/apps/details?id=com.BrokenAC.KataNight&pcampaignid=web_share">KataNight</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 6</li>
+                <li>Time frame: 3 months</li>
+                <li>Engine: Unity, 2D, Mobile</li>
+                <li>Tasks: Input detection, player, level systems</li>
+            </ul>
+        </div>
+        <h2>Input detection </h2>
+        <ul>
+            <li>Different inputs: Game detects swipes up, down and taps left and right on both sides of player</li>
+            <li>Lobbies: Able to make private or public lobbies</li>
+            <li>Lobby searching: Display all lobbies</li>
+        </ul>
+        <h2>Level systems </h2>
+        <ul>
+            <li>Rewards: Detects if different correct or incorrect inputs were made and gives rewards accordingly</li>
+            <li>Repeating background: Seamlessly starts repeating background</li>
+            <li>Replay: Able to replay same level, go to next one or revive with one life</li>
+        </ul>
+        <h2>Player </h2>
+        <ul>
+            <li>Enemy detection: Detects enemies that come close</li>
+            <li>Input detection: Moves to the direction of input</li>
+            <li>Input feeding: Checks if the input made matches the one needed to kill the enemy</li>
+        </ul>
+        <h1>Kata Night - Google Play</h1>
+    <p>Check out Kata Night on the Google Play Store:</p>
+    <a href="https://play.google.com/store/apps/details?id=com.BrokenAC.KataNight&pcampaignid=web_share" target="_blank">Click here to view the game</a>
+    <p></p>
+    <iframe frameborder="0" src="https://itch.io/embed/2343743?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/katanight">KataNight by Sarcaster, retvis, Humsteri, depisbaby, Purkaja</a></iframe>
+    </div>
 
+    <div class="content">
+        <h2><a href="https://rockatana.itch.io/sunescape">Sunescape</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 9</li>
+                <li>Time frame: 2 months</li>
+                <li>Engine: Unity, 3D</li>
+                <li>Tasks: Main menu, pause menu, enemy AI</li>
+                <li>Special mention: Assembly Summer 2023 Development Competition 5th place</li>
+            </ul>
+        </div>
+        <h2>Menus</h2>
+        <ul>
+            <li>UI toolkit: Modular menus made with UI toolkit</li>
+            <li>Settings: Volume, music, graphic settings</li>
+            <li>Saving: Chosen settings get saved and loaded</li>
+        </ul>
+        <h2>Enemy AI </h2>
+        <ul>
+            <li>Melee enemy: Enemy that comes close and tries to slash the player</li>
+            <li>Crawler: Enemy that follows player and tries to plunge and topple the player</li>
+            <li>Exploding enemy: Enemy that tries to come close to player and explode</li>
+        </ul>
+        <h2>Menu camera </h2>
+        <ul>
+            <li>Camera: Level selection camera that can move left and right</li>
+        </ul>
+        <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
+    </div>
+
+    <div class="content">
+        <h2><a href="https://sarcaster.itch.io/her-inheritance">Her Inheritance</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 5</li>
+                <li>Time frame: 8 weeks</li>
+                <li>Engine: Unity, 2D</li>
+                <li>Tasks: Menus, enemy AI, inventory</li>
+            </ul>
+        </div>
+        <h2>Menus</h2>
+        <ul>
+            <li>Basic start and pause menus</li>
+            <li>Settings: Volume, music</li>
+        </ul>
+        <h2>Enemy AI </h2>
+        <ul>
+            <li>Pathfinding: A*</li>
+            <li>Tries to come close to player and bite</li>
+            <li>Spawning when certain puzzles are done</li>
+        </ul>
+        <h2>Inventory </h2>
+        <ul>
+            <li>Three slot inventory</li>
+            <li>Items can be used by pressing once or dropped by holding</li>
+        </ul>
+        <iframe frameborder="0" src="https://itch.io/embed/2073931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/her-inheritance">Her Inheritance by Sarcaster, Humsteri</a></iframe>
+    </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
     </footer>
