--- a/sideprojects.html
+++ b/sideprojects.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="content">
-        <h2><a href="https://v3.globalgamejam.org/2023/games/ember-abyss-2">Ember Abyss</a></h2>
+        <h2><a href="https://retvis.itch.io/madgoat">Mad Goat</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
             <ul>
