--- a/projects.html
+++ b/projects.html
@@ -67,8 +67,9 @@
             <li>Dialogue Activation: Certain dialogue options may require specific items in the player’s inventory.</li>
             <li>Gradual Text Display: Implemented a letter-by-letter text appearance</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2837437?linkback=true&amp;bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/groundfolk">Groundfolk by retvis, Humsteri, Masaboy, Joukkari</a></iframe>
-        
+        </div>
         <p></p>
     </div>
     <div class="content">
