Itch.io embed containers

--- a/projects_unity.html
+++ b/projects_unity.html
@@ -66,8 +66,9 @@
             <li>Dialogue Activation: Certain dialogue options may require specific items in the player’s inventory.</li>
             <li>Gradual Text Display: Implemented a letter-by-letter text appearance</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2837437?linkback=true&amp;bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/groundfolk">Groundfolk by retvis, Humsteri, Masaboy, Joukkari</a></iframe>
-        
+        </div>
         <p></p>
     </div>
     <div class="content">
@@ -104,8 +105,10 @@
     <p>Check out Kata Night on the Google Play Store:</p>
     <a href="https://play.google.com/store/apps/details?id=com.BrokenAC.KataNight&pcampaignid=web_share" target="_blank">Click here to view the game</a>
     <p></p>
+    <div class="embed-container">
     <iframe frameborder="0" src="https://itch.io/embed/2343743?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/katanight">KataNight by Sarcaster, retvis, Humsteri, depisbaby, Purkaja</a></iframe>
     </div>
+</div>
 
     <div class="content">
         <h2><a href="https://rockatana.itch.io/sunescape">Sunescape</a></h2>
@@ -136,7 +139,9 @@
         <ul>
             <li>Camera: Level selection camera that can move left and right</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
+        </div>
     </div>
 
     <div class="content">
@@ -167,7 +172,9 @@
             <li>Three slot inventory</li>
             <li>Items can be used by pressing once or dropped by holding</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2073931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/her-inheritance">Her Inheritance by Sarcaster, Humsteri</a></iframe>
+        </div>
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
