--- a/sideprojects.html
+++ b/sideprojects.html
@@ -87,7 +87,9 @@
         <ul>
             <li>Fire vfx</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2352184?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/madgoat">MadGoat by retvis, Masaboy, Tabbe, Humsteri</a></iframe>
+    </div>
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
