--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,9 @@
             <li>Scoreboard: Displays steam icon, name, kills, deaths, KDA</li>
             <li>Match winner: Announces the winner of the match at the end of the round</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2684667?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://juhot.itch.io/pogo-blast">Pogo Blast by JuhoT, FakeKuhis, Purkaja, Masaboy, Sarcaster, eetsuou, Humsteri, retvis</a></iframe>
+        </div>
     </div>
     <div class="content">
         <h2><a href="https://play.google.com/store/apps/details?id=com.BrokenAC.KataNight&pcampaignid=web_share">KataNight</a></h2>
@@ -132,9 +134,10 @@
     <p>Check out Kata Night on the Google Play Store:</p>
     <a href="https://play.google.com/store/apps/details?id=com.BrokenAC.KataNight&pcampaignid=web_share" target="_blank">Click here to view the game</a>
     <p></p>
+    <div class="embed-container">
     <iframe frameborder="0" src="https://itch.io/embed/2343743?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/katanight">KataNight by Sarcaster, retvis, Humsteri, depisbaby, Purkaja</a></iframe>
     </div>
-
+    </div>
     <div class="content">
         <h2><a href="https://rockatana.itch.io/sunescape">Sunescape</a></h2>
         <div class="info-box">
@@ -164,7 +167,9 @@
         <ul>
             <li>Camera: Level selection camera that can move left and right</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
+        </div>
     </div>
 
     <div class="content">
@@ -195,7 +200,9 @@
             <li>Three slot inventory</li>
             <li>Items can be used by pressing once or dropped by holding</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2073931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/her-inheritance">Her Inheritance by Sarcaster, Humsteri</a></iframe>
+        </div>
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
