--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -53,7 +53,9 @@
             <li>Scoreboard: Displays steam icon, name, kills, deaths, KDA</li>
             <li>Match winner: Announces the winner of the match at the end of the round</li>
         </ul>
+        <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2684667?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://juhot.itch.io/pogo-blast">Pogo Blast by JuhoT, FakeKuhis, Purkaja, Masaboy, Sarcaster, eetsuou, Humsteri, retvis</a></iframe>
+        </div>
     </div>
 
     <footer>
