--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Aapo Kojo</h1>
             <nav>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="projects.html">Professional Projects</a>
             <a href="sideprojects.html">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
@@ -28,7 +28,7 @@
         <p>I'm studying game programming at Kajaani University of Applied Sciences (KAMK) and currently I'm on my third year.
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
 
-        <img src="sly.png" alt="Sly" width="200" height="150">
+        <img src="Portrait.png" alt="Sly" width="400" height="150">
         
         <h2>Little bit about myself </h2>
         <ul>
