--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Aapo Kojo</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="projects.html">Professional Projects</a>
             <a href="sideprojects.html">Fun Side Projects</a>
             <a href="resume.html">Resume</a>
