--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="This page contains projects that I have made or have been part of.">
     <title> Aapo Kojo </title>
-    <link rel="icon" href="sly.png" type="image/x-icon">
+    <link rel="icon" href="Portrait.png" type="image/x-icon">
+    <link rel="icon2" href="Portrait.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
 
         <img src="Portrait.png" alt="Portrait" width="400" height="150">
-        
+        <img src="Portrait.png" alt="Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
         <ul>
             <li>I'm 22 years old and I'm from Finland</li>
