--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="This page contains projects that I have made or have been part of.">
     <title> Aapo Kojo </title>
-    <link rel="icon" href="Portrait.png" type="image/x-icon">
-    <link rel="icon2" href="Portrait.png" type="image/x-icon">
+    <link rel="icon" href="sly.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -29,7 +28,6 @@
         <p>I'm studying game programming at Kajaani University of Applied Sciences (KAMK) and currently I'm on my third year.
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
 
-        <img src="sly.png" alt="Portrait" width="400" height="150">
         <img src="Portrait.png" alt="Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
         <ul>
