--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     
     <link rel="stylesheet" href="styles.css">
     <meta name="author" content="Aapo Kojo">
-    <meta name="description" content="This page contains projects that I have made or have been part of.">
+    <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
+    <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, [unity programmer portfolio], [Kajaani]">
     <title> Aapo Kojo </title>
     <link rel="icon" href="sly.png" type="image/x-icon">
 </head>
