Trying to make site appear in search

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="google-site-verification" content="E_l9mRxXGbxzlmlegZIAnYAeMSckeIQpluDer1gbF4U" />
     <link rel="stylesheet" href="styles.css">
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
     <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, [unity programmer portfolio], [Kajaani]">
-    <title> Aapo Kojo </title>
+    <title>Aapo Kojo - Game Programmer Portfolio</title>
     <link rel="icon" href="sly.png" type="image/x-icon">
 </head>
 <body>
