--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
-    <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, [unity programmer portfolio], [Kajaani]">
+    <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, unity programmer, c#, unreal engine, Pogo game, kamk, groundfolk, Kajaani">
     <title>Aapo Kojo - Game Programmer Portfolio</title>
     <link rel="icon" href="sly.png" type="image/x-icon">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DM8BJ645S1"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DM8BJ645S1');
+</script>
 </head>
 <body>
     <header>
@@ -29,7 +37,7 @@
         <p>I'm studying game programming at Kajaani University of Applied Sciences (KAMK) and currently I'm on my third year.
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
 
-        <img src="Portrait.png" alt="Portrait" width="400" height="150">
+        <img src="Portrait.png" alt="Aapo Kojo Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
         <ul>
             <li>I'm 22 years old and I'm from Finland</li>
