Testing gifs again

--- a/projects_unity.html
+++ b/projects_unity.html
@@ -49,6 +49,7 @@
             <li>Stack Splitting: Split item stacks for flexible inventory management</li>
             <li>Deposit Buttons: Mass move items from inventory to container or vise versa</li>
         </ul>
+        <img src="Chest.gif" alt="Chest GIF" width="600" height="300">
         <h2>Items </h2>
         <ul>
             <li>Item Management: System that allows players to drop single items or entire stacks easily</li>
