--- a/projects.html
+++ b/projects.html
@@ -50,23 +50,27 @@
             <li>Stack Splitting: Split item stacks for flexible inventory management</li>
             <li>Deposit Buttons: Mass move items from inventory to container or vise versa</li>
         </ul>
+        <img src="Chest.gif" alt="Chest GIF" width="600" height="300">
         <h2>Items </h2>
         <ul>
             <li>Item Management: System that allows players to drop single items or entire stacks easily</li>
             <li>Scriptable Objects: Easy addition of new items, enhancing scalability.</li>
             <li>Event Integration: Event handling for items to make different consumables</li>
         </ul>
+        <img src="Items.gif" alt="Items GIF" width="600" height="300">
         <h2>Crafting </h2>
         <ul>
             <li>Expandable Crafting System: System that can be easily expanded using scriptable objects</li>
             <li>New Item Integration: Facilitated the addition of new items with scriptable objects for crafting recipes</li>
         </ul>
+        <img src="Crafting.gif" alt="Crafting GIF" width="600" height="300">
         <h2>Dialogue </h2>
         <ul>
             <li>Dialogue unlocking: Players can unlock additional dialogue options by engaging in conversations with characters</li>
             <li>Dialogue Activation: Certain dialogue options may require specific items in the player’s inventory.</li>
             <li>Gradual Text Display: Implemented a letter-by-letter text appearance</li>
         </ul>
+        <img src="Dialogue.gif" alt="Dialogue GIF" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2837437?linkback=true&amp;bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/groundfolk">Groundfolk by retvis, Humsteri, Masaboy, Joukkari</a></iframe>
         </div>
