--- a/projects_unity.html
+++ b/projects_unity.html
@@ -93,12 +93,14 @@
             <li>Lobbies: Able to make private or public lobbies</li>
             <li>Lobby searching: Display all lobbies</li>
         </ul>
+        <img src="InputDetection.gif" alt="Input GIF" width="600" height="300">
         <h2>Level systems </h2>
         <ul>
             <li>Rewards: Detects if different correct or incorrect inputs were made and gives rewards accordingly</li>
             <li>Repeating background: Seamlessly starts repeating background</li>
             <li>Replay: Able to replay same level, go to next one or revive with one life</li>
         </ul>
+        <img src="LevelRewardSystem.gif" alt="Reward GIF" width="600" height="300">
         <h2>Player </h2>
         <ul>
             <li>Enemy detection: Detects enemies that come close</li>
