--- a/projects.html
+++ b/projects.html
@@ -122,12 +122,14 @@
             <li>Lobbies: Able to make private or public lobbies</li>
             <li>Lobby searching: Display all lobbies</li>
         </ul>
+        <img src="InputDetection.gif" alt="Input GIF" width="600" height="300">
         <h2>Level systems </h2>
         <ul>
             <li>Rewards: Detects if different correct or incorrect inputs were made and gives rewards accordingly</li>
             <li>Repeating background: Seamlessly starts repeating background</li>
             <li>Replay: Able to replay same level, go to next one or revive with one life</li>
         </ul>
+        <img src="LevelRewardSystem.gif" alt="Reward GIF" width="600" height="300">
         <h2>Player </h2>
         <ul>
             <li>Enemy detection: Detects enemies that come close</li>
@@ -161,16 +163,19 @@
             <li>Settings: Volume, music, graphic settings</li>
             <li>Saving: Chosen settings get saved and loaded</li>
         </ul>
+        <img src="MainMenuSunescape.png" alt="Sunescape main menu" width="600" height="300">
         <h2>Enemy AI </h2>
         <ul>
             <li>Melee enemy: Enemy that comes close and tries to slash the player</li>
             <li>Crawler: Enemy that follows player and tries to plunge and topple the player</li>
             <li>Exploding enemy: Enemy that tries to come close to player and explode</li>
         </ul>
+        <img src="SunescapeEnemies.gif" alt="Sunescape enemies" width="600" height="300">
         <h2>Menu camera </h2>
         <ul>
             <li>Camera: Level selection camera that can move left and right</li>
         </ul>
+        <img src="SunescapeMap.gif" alt="Sunescape map" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
         </div>
