--- a/projects_unity.html
+++ b/projects_unity.html
@@ -135,16 +135,19 @@
             <li>Settings: Volume, music, graphic settings</li>
             <li>Saving: Chosen settings get saved and loaded</li>
         </ul>
+        <img src="MainMenuSunescape.png" alt="Sunescape main menu" width="600" height="300">
         <h2>Enemy AI </h2>
         <ul>
             <li>Melee enemy: Enemy that comes close and tries to slash the player</li>
             <li>Crawler: Enemy that follows player and tries to plunge and topple the player</li>
             <li>Exploding enemy: Enemy that tries to come close to player and explode</li>
         </ul>
+        <img src="SunescapeEnemies.gif" alt="Sunescape enemies" width="600" height="300">
         <h2>Menu camera </h2>
         <ul>
             <li>Camera: Level selection camera that can move left and right</li>
         </ul>
+        <img src="SunescapeMap.gif" alt="Sunescape map" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
         </div>
